# crewai-sdlc-orchestrator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: main.py
app/agents/: automation_agent.py  dev_agent.py  qa_agent.py  release_agent.py
app/config/: agents.yaml  pipeline.yaml  platforms.yaml
app/models/: approvals.py  artifacts.py  pipeline_state.py  telemetry.py
app/orchestration/: approval_manager.py  crew_factory.py  pipeline_runner.py  prd_ingester.py  retry_policy.py  state_manager.py
app/storage/: artifact_store.py  checkpoint_store.py
app/tasks/: execution.py  fs.py  release.py  scoping.py  test_plan.py  test_scripts.py  triage.py
app/telemetry/: callbacks.py  metrics.py
app/tools/: approval_tools.py  bug_tool.py  ci_tool.py  docs_tool.py  notification_tool.py
sample_data/: README.md  prd_shopping_cart.json  prd_user_authentication.md
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_models.py  test_prd_ingester.py  test_retry_policy.py  test_storage.py
